[metadata]
name = PSNAWP
version = 2022.06.26
author = Yoshikage Kira (@isFakeAccount)
author_email = trevorphillips@gmx.us
url = https://github.com/isFakeAccount/psnawp
description = Python API Wrapper for PlayStation Network API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = PSN API
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/isFakeAccount/psnawp/issues
    Changelog = https://github.com/isFakeAccount/psnawp/blob/master/CHANGELOG.md
    Source Code = https://github.com/isFakeAccount/psnawp
    Documentation = https://psnawp.readthedocs.io/en/latest/

[options]
python_requires = >= 3.9
package_dir =
    =src
packages = find:
test_suite = tests
install_requires =
    certifi==2022.9.14
    chardet==5.0.0
    idna==3.4
    requests==2.28.1
    urllib3==1.26.12
setup_requires =
    setuptools
zip_safe = false
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
testing =
    flake8==4.0.1
    mypy==0.961
    types-requests==2.28.0
    pytest==7.1.2
    pytest-cov==3.0.0
    vcrpy==4.1.1
    pytest-vcr==1.0.2
    python-dotenv==0.20.0
    pre-commit==2.19.0
docs =
    Sphinx==5.1.1
    sphinx-rtd-theme==1.0.0


[options.package_data]
psnawp_api = py.typed
