[metadata]
name = PSNAWP
version = 1.0.0
author = Yoshikage Kira (@isFakeAccount)
author_email = trevorphillips@gmx.us
url = https://github.com/isFakeAccount/psnawp
description = Python API Wrapper for PlayStation Network API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
platform = any
keywords = PSN API
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/isFakeAccount/psnawp/issues
    Changelog = https://github.com/isFakeAccount/psnawp/blob/master/CHANGELOG.md
    Source Code = https://github.com/isFakeAccount/psnawp
    Documentation = https://psnawp.readthedocs.io/en/latest/

[options]
python_requires = >= 3.9
package_dir =
    =src
packages = find:
test_suite = tests
install_requires =
    certifi==2022.9.24
    chardet==5.0.0
    idna==3.4
    requests==2.28.1
    urllib3==1.26.12
setup_requires =
    setuptools
zip_safe = false
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
testing =
    build==0.8.0
    certifi==2022.9.24
    chardet==5.0.0
    flake8==5.0.4
    idna==3.4
    mypy==0.981
    pip-tools==6.8.0
    pre-commit==2.20.0
    pytest==7.1.3
    pytest-cov==4.0.0
    pytest-vcr==1.0.2
    python-dotenv==0.21.0
    requests==2.28.1
    twine==4.0.1
    types-requests==2.28.11
    urllib3==1.26.12
    vcrpy==4.2.1
docs =
    sphinx==5.2.2
    sphinx-rtd-theme==1.0.0


[options.package_data]
psnawp_api = py.typed
