[metadata]
name = PSNAWP
version = 1.2.1
author = Yoshikage Kira (@isFakeAccount)
author_email = trevorphillips@gmx.us
url = https://github.com/isFakeAccount/psnawp
description = Python API Wrapper for PlayStation Network API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
platform = any
keywords = PSN API
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/isFakeAccount/psnawp/issues
    Changelog = https://github.com/isFakeAccount/psnawp/blob/master/CHANGELOG.md
    Source Code = https://github.com/isFakeAccount/psnawp
    Documentation = https://psnawp.readthedocs.io/en/latest/

[options]
python_requires = >= 3.8
package_dir =
    =src
packages = find:
test_suite = tests
install_requires = file: requirements.txt
setup_requires =
    setuptools
zip_safe = false
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
testing = file: requirements_dev.txt
docs =
    sphinx==5.3.0
    sphinx-materialdesign-theme==0.1.11


[options.package_data]
psnawp_api = py.typed
